--- a/mysetlink.io/liam/mysetlink.html
+++ b/mysetlink.io/liam/mysetlink.html
@@ -3,19 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Setlink Profile - Emma</title>
+    <title>Setlink Profile - Liam</title>
     <link rel="stylesheet" href="../styling/style.css">
 </head>
 <body>
-    <a class="page-logo" href="https://mysetlink.io/">
-        <picture><source srcset="../Setlink_LogoWhite1.svg" type="image/svg+xml"><img src="../Setlink_LogoWhite1.png" alt="Setlink"></picture>
-        <span class="hero-logo-text">Setlink</span>
-    </a>
+    <a class="page-logo" href="https://mysetlink.io/"><picture><source srcset="../Setlink_LogoWhite1.svg" type="image/svg+xml"><img src="../Setlink_LogoWhite1.png" alt="Setlink"></picture></a>
     <main class="page">
         <section class="card" aria-label="Profile card">
-            <img class="avatar" src="https://images.unsplash.com/photo-1529665253569-6d01c0eaf7b6?auto=format&fit=crop&w=300&q=80" alt="Emma portrait">
-            <h1 class="name">Emma Greene</h1>
-            <p class="tagline">Indie singer-songwriter bringing mellow vibes.</p>
+            <img class="avatar" src="https://images.unsplash.com/photo-1544723795-3fb6469f5b39?auto=format&fit=crop&w=300&q=80" alt="Liam portrait">
+            <h1 class="name">Liam Turner</h1>
+            <p class="tagline">DJ and producer crafting late-night sets.</p>
         <section class="songs" aria-label="Song search and list">
             <form class="search" role="search">
                 <div class="search-bar">
@@ -58,68 +55,68 @@
             </div>
             <h2 class="songs-title">Popular Songs</h2>
             <div class="song-list" role="list" aria-live="polite">
-                <div class="song-item" role="listitem" data-text="skinny love birdy indie">
+                <div class="song-item" role="listitem" data-text="levels avicii edm">
                     <div class="song-meta">
-                        <p class="song-title">Skinny Love</p>
+                        <p class="song-title">Levels</p>
                         <div class="song-subline">
-                            <span class="song-artist">Birdy</span>
+                            <span class="song-artist">Avicii</span>
                             <span class="song-dot" aria-hidden="true"></span>
-                            <span class="song-genre">Indie</span>
+                            <span class="song-genre">EDM</span>
                         </div>
                     </div>
-                    <button class="song-arrow" type="button" aria-label="Request Skinny Love">
+                    <button class="song-arrow" type="button" aria-label="Request Levels">
                         <svg viewBox="0 0 24 24"><path d="M21.426 11.095L4.42601 3.09504C4.25482 3.0145 4.0643 2.98416 3.87657 3.00756C3.68883 3.03095 3.51158 3.10713 3.36541 3.22723C3.21923 3.34733 3.11012 3.50644 3.05076 3.68607C2.99139 3.8657 2.98419 4.05849 3.03001 4.24205L4.24201 9.09104L12 12L4.24201 14.909L3.03001 19.758C2.98333 19.9417 2.98992 20.1349 3.04902 20.315C3.10811 20.4951 3.21726 20.6546 3.3637 20.7749C3.51014 20.8953 3.68782 20.9714 3.87594 20.9944C4.06406 21.0175 4.25486 20.9865 4.42601 20.905L21.426 12.905C21.5978 12.8243 21.7431 12.6963 21.8448 12.536C21.9466 12.3758 22.0006 12.1899 22.0006 12C22.0006 11.8102 21.9466 11.6243 21.8448 11.464C21.7431 11.3038 21.5978 11.1758 21.426 11.095Z" fill="#FFCC66"></path></svg>
                     </button>
                 </div>
-                <div class="song-item" role="listitem" data-text="holocene bon iver indie folk">
+                <div class="song-item" role="listitem" data-text="one more time daft punk house">
                     <div class="song-meta">
-                        <p class="song-title">Holocene</p>
+                        <p class="song-title">One More Time</p>
                         <div class="song-subline">
-                            <span class="song-artist">Bon Iver</span>
+                            <span class="song-artist">Daft Punk</span>
                             <span class="song-dot" aria-hidden="true"></span>
-                            <span class="song-genre">Indie Folk</span>
+                            <span class="song-genre">House</span>
                         </div>
                     </div>
-                    <button class="song-arrow" type="button" aria-label="Request Holocene">
+                    <button class="song-arrow" type="button" aria-label="Request One More Time">
                         <svg viewBox="0 0 24 24"><path d="M21.426 11.095L4.42601 3.09504C4.25482 3.0145 4.0643 2.98416 3.87657 3.00756C3.68883 3.03095 3.51158 3.10713 3.36541 3.22723C3.21923 3.34733 3.11012 3.50644 3.05076 3.68607C2.99139 3.8657 2.98419 4.05849 3.03001 4.24205L4.24201 9.09104L12 12L4.24201 14.909L3.03001 19.758C2.98333 19.9417 2.98992 20.1349 3.04902 20.315C3.10811 20.4951 3.21726 20.6546 3.3637 20.7749C3.51014 20.8953 3.68782 20.9714 3.87594 20.9944C4.06406 21.0175 4.25486 20.9865 4.42601 20.905L21.426 12.905C21.5978 12.8243 21.7431 12.6963 21.8448 12.536C21.9466 12.3758 22.0006 12.1899 22.0006 12C22.0006 11.8102 21.9466 11.6243 21.8448 11.464C21.7431 11.3038 21.5978 11.1758 21.426 11.095Z" fill="#FFCC66"></path></svg>
                     </button>
                 </div>
-                <div class="song-item" role="listitem" data-text="fast car tracy chapman folk">
+                <div class="song-item" role="listitem" data-text="titanium david guetta sia edm">
                     <div class="song-meta">
-                        <p class="song-title">Fast Car</p>
+                        <p class="song-title">Titanium</p>
                         <div class="song-subline">
-                            <span class="song-artist">Tracy Chapman</span>
+                            <span class="song-artist">David Guetta ft. Sia</span>
                             <span class="song-dot" aria-hidden="true"></span>
-                            <span class="song-genre">Folk</span>
+                            <span class="song-genre">EDM</span>
                         </div>
                     </div>
-                    <button class="song-arrow" type="button" aria-label="Request Fast Car">
+                    <button class="song-arrow" type="button" aria-label="Request Titanium">
                         <svg viewBox="0 0 24 24"><path d="M21.426 11.095L4.42601 3.09504C4.25482 3.0145 4.0643 2.98416 3.87657 3.00756C3.68883 3.03095 3.51158 3.10713 3.36541 3.22723C3.21923 3.34733 3.11012 3.50644 3.05076 3.68607C2.99139 3.8657 2.98419 4.05849 3.03001 4.24205L4.24201 9.09104L12 12L4.24201 14.909L3.03001 19.758C2.98333 19.9417 2.98992 20.1349 3.04902 20.315C3.10811 20.4951 3.21726 20.6546 3.3637 20.7749C3.51014 20.8953 3.68782 20.9714 3.87594 20.9944C4.06406 21.0175 4.25486 20.9865 4.42601 20.905L21.426 12.905C21.5978 12.8243 21.7431 12.6963 21.8448 12.536C21.9466 12.3758 22.0006 12.1899 22.0006 12C22.0006 11.8102 21.9466 11.6243 21.8448 11.464C21.7431 11.3038 21.5978 11.1758 21.426 11.095Z" fill="#FFCC66"></path></svg>
                     </button>
                 </div>
-                <div class="song-item" role="listitem" data-text="river leon bridges soul">
+                <div class="song-item" role="listitem" data-text="animals martin garrix edm">
                     <div class="song-meta">
-                        <p class="song-title">River</p>
+                        <p class="song-title">Animals</p>
                         <div class="song-subline">
-                            <span class="song-artist">Leon Bridges</span>
+                            <span class="song-artist">Martin Garrix</span>
                             <span class="song-dot" aria-hidden="true"></span>
-                            <span class="song-genre">Soul</span>
+                            <span class="song-genre">EDM</span>
                         </div>
                     </div>
-                    <button class="song-arrow" type="button" aria-label="Request River">
+                    <button class="song-arrow" type="button" aria-label="Request Animals">
                         <svg viewBox="0 0 24 24"><path d="M21.426 11.095L4.42601 3.09504C4.25482 3.0145 4.0643 2.98416 3.87657 3.00756C3.68883 3.03095 3.51158 3.10713 3.36541 3.22723C3.21923 3.34733 3.11012 3.50644 3.05076 3.68607C2.99139 3.8657 2.98419 4.05849 3.03001 4.24205L4.24201 9.09104L12 12L4.24201 14.909L3.03001 19.758C2.98333 19.9417 2.98992 20.1349 3.04902 20.315C3.10811 20.4951 3.21726 20.6546 3.3637 20.7749C3.51014 20.8953 3.68782 20.9714 3.87594 20.9944C4.06406 21.0175 4.25486 20.9865 4.42601 20.905L21.426 12.905C21.5978 12.8243 21.7431 12.6963 21.8448 12.536C21.9466 12.3758 22.0006 12.1899 22.0006 12C22.0006 11.8102 21.9466 11.6243 21.8448 11.464C21.7431 11.3038 21.5978 11.1758 21.426 11.095Z" fill="#FFCC66"></path></svg>
                     </button>
                 </div>
-                <div class="song-item" role="listitem" data-text="breathe me sia pop">
+                <div class="song-item" role="listitem" data-text="dont you worry child swedish house mafia edm">
                     <div class="song-meta">
-                        <p class="song-title">Breathe Me</p>
+                        <p class="song-title">Don't You Worry Child</p>
                         <div class="song-subline">
-                            <span class="song-artist">Sia</span>
+                            <span class="song-artist">Swedish House Mafia</span>
                             <span class="song-dot" aria-hidden="true"></span>
-                            <span class="song-genre">Pop</span>
+                            <span class="song-genre">EDM</span>
                         </div>
                     </div>
-                    <button class="song-arrow" type="button" aria-label="Request Breathe Me">
+                    <button class="song-arrow" type="button" aria-label="Request Don't You Worry Child">
                         <svg viewBox="0 0 24 24"><path d="M21.426 11.095L4.42601 3.09504C4.25482 3.0145 4.0643 2.98416 3.87657 3.00756C3.68883 3.03095 3.51158 3.10713 3.36541 3.22723C3.21923 3.34733 3.11012 3.50644 3.05076 3.68607C2.99139 3.8657 2.98419 4.05849 3.03001 4.24205L4.24201 9.09104L12 12L4.24201 14.909L3.03001 19.758C2.98333 19.9417 2.98992 20.1349 3.04902 20.315C3.10811 20.4951 3.21726 20.6546 3.3637 20.7749C3.51014 20.8953 3.68782 20.9714 3.87594 20.9944C4.06406 21.0175 4.25486 20.9865 4.42601 20.905L21.426 12.905C21.5978 12.8243 21.7431 12.6963 21.8448 12.536C21.9466 12.3758 22.0006 12.1899 22.0006 12C22.0006 11.8102 21.9466 11.6243 21.8448 11.464C21.7431 11.3038 21.5978 11.1758 21.426 11.095Z" fill="#FFCC66"></path></svg>
                     </button>
                 </div>
