--- a/oisin/mysetlink.html
+++ b/oisin/mysetlink.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="../styling/style.css">
 </head>
 <body>
-    <a class="page-logo" href="https://mysetlink.io/"><picture><source srcset="../Setlink_LogoWhite1.svg" type="image/svg+xml"><img src="../Setlink_LogoWhite1.png" alt="Setlink"></picture></a>
+    <a class="page-logo" href="https://mysetlink.io/">
+        <picture><source srcset="../Setlink_LogoWhite1.svg" type="image/svg+xml"><img src="../Setlink_LogoWhite1.png" alt="Setlink"></picture>
+        <span class="hero-logo-text">Setlink</span>
+    </a>
     <main class="page">
         <section class="card" aria-label="Profile card">
             <img class="avatar" src="../oisin/400_New black Oisin Murray - The Old Hairdresser's - Fennell Records - 23_12_22 - Sean Bruce Monteith-06-min 1.png" alt="Oisin portrait">
