--- a/mysetlink.io/index.html
+++ b/mysetlink.io/index.html
@@ -8,11 +8,12 @@
 </head>
 <body class="landing green-landing">
     <header class="top-nav">
-        <a class="hero-logo small" href="./index.html" aria-label="Go to MySetlink.io">
+        <a class="hero-logo small" href="https://mysetlink.io" aria-label="Go to MySetlink.io">
             <picture>
                 <source srcset="Setlink_LogoWhite1.svg" type="image/svg+xml">
                 <img src="Setlink_LogoWhite1.png" alt="Setlink logo">
             </picture>
+            <span class="hero-logo-text">Setlink</span>
         </a>
         <div class="nav-actions">
             <button id="user-search-toggle" class="nav-icon" aria-label="Search users">
@@ -42,13 +43,6 @@
     </header>
     <main class="hero hero-linktree">
         <div class="hero-inner">
-            <div class="hero-brand" aria-label="Setlink">
-                <picture>
-                    <source srcset="Setlink_LogoWhite1.svg" type="image/svg+xml">
-                    <img src="Setlink_LogoWhite1.png" alt="Setlink logo">
-                </picture>
-                <span class="hero-brand-text">Setlink</span>
-            </div>
             <h1>One link to engage your audience</h1>
             <p class="hero-sub highlight">Designed to let fans <span class="gold-highlight">request songs</span>, <span class="gold-highlight">tip</span>, and leave <span class="gold-highlight">reviews</span> without interrupting the show.</p>
             <button id="scan-random" class="cta hero-primary" type="button">Scan</button>
