--- a/sofia/mysetlink.html
+++ b/sofia/mysetlink.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="../styling/style.css">
 </head>
 <body>
-    <a class="page-logo" href="https://mysetlink.io/"><picture><source srcset="../Setlink_LogoWhite1.svg" type="image/svg+xml"><img src="../Setlink_LogoWhite1.png" alt="Setlink"></picture></a>
+    <a class="page-logo" href="https://mysetlink.io/">
+        <picture><source srcset="../Setlink_LogoWhite1.svg" type="image/svg+xml"><img src="../Setlink_LogoWhite1.png" alt="Setlink"></picture>
+        <span class="hero-logo-text">Setlink</span>
+    </a>
     <main class="page">
         <section class="card" aria-label="Profile card">
             <img class="avatar" src="https://images.unsplash.com/photo-1527980965255-d3b416303d12?auto=format&fit=crop&w=300&q=80" alt="Sofia portrait">
